--- a/hackatonbari/src/App.css
+++ b/hackatonbari/src/App.css
@@ -1,5 +1,12 @@
 /* Importazione del font */
-@import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+
+* {
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
 
 /* Stile per l'intera pagina */
 body, html {
@@ -7,7 +14,6 @@ body, html {
   padding: 0;
   height: 500%;
   background: linear-gradient(to bottom right, #932cb3, #2575fc);
-  font-family: 'Luxurious Roman', cursive;
 }
 
 #root {
@@ -25,24 +31,21 @@ h3 {
 /* Stile principale del quiz */
 .quiz-main {
   padding: 50px;
-  background: rgba(255, 255, 255, 0.9); /* Cambia il colore della card */
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
   box-shadow: 0 40px 60px rgba(0, 0, 0, 0.2);
   max-width: 600px;
   margin: auto;
-  color: #1d1d1d; /* Cambia il colore del titolo */
-  /* centra verticalmente */
+  color: #1d1d1d;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-
 .question-type {
   text-transform: capitalize;
   font-size: 17px;
 }
-
 
 .table-cell {
   text-transform: capitalize;
@@ -56,67 +59,6 @@ h3 {
   font-size: 20px;
   margin-top: 20px;
 }
-
-
-@media screen and (min-width: 800px) {
-  .options-grid:hover {
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
-  }
-}
-
-.submit-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-}
-
-/* Stile specifico per il TextField quando è in focus */
-.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-  border-color: #6a11cb;
-}
-
-.MuiInputLabel-root.Mui-focused {
-  color: #6a11cb;
-}
-
-.MuiOutlinedInput-input {
-  background-color: rgba(235, 231, 231, 0.945);
-  border-radius: 4px;
-  padding: 10px;
-  color: #333; /* Cambia il colore del testo se necessario */
-}
-
-.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-input {
-  background-color: rgba(235, 220, 220, 0.2);
-}
-
-
-/* Stile avanzato per il titolo */
-.title {
-  font-size: 3rem;
-  background: linear-gradient(45deg, #ff6b6b, #f0e130, #6b6bff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradient-animation 5s infinite;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-@keyframes gradient-animation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
 
 /* Pagina del quiz */
 .play-quiz {
@@ -155,5 +97,133 @@ h3 {
 
 .answers button:hover {
   background-color: #3700b3;
+}
+
+.submit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
+/* Stile specifico per il TextField quando è in focus */
+.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: #6a11cb;
+}
+
+.MuiInputLabel-root.Mui-focused {
+  color: #6a11cb;
+}
+
+.MuiOutlinedInput-input {
+  background-color: rgba(235, 231, 231, 0.945);
+  border-radius: 4px;
+  padding: 10px;
+  color: #333;
+}
+
+.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-input {
+  background-color: rgba(235, 220, 220, 0.2);
+}
+
+/* Stile avanzato per il titolo */
+.title {
+  font-size: 3rem;
+  background: linear-gradient(45deg, #ff6b6b, #f0e130, #6b6bff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient-animation 5s infinite;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.MuiTableCell-root {
+  font-family: "Orbitron", sans-serif !important;
+  font-weight: 700 !important;
+}
+
+.MuiTable-root {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.MuiTableHead-root {
+  background-color: #6a11cb;
+  color: white;
+}
+
+.MuiTableRow-root {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
+}
+
+.MuiTableCell-body {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.MuiTableRow-root:last-child .MuiTableCell-body {
+  border-bottom: none;
+}
+
+.table-container {
+  overflow-x: auto;
+}
+
+.MuiTableCell-root {
+  padding: 4px 8px;
+}
+
+.filter-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.filter-select {
+  margin: 0 10px;
+  min-width: 150px;
+}
+
+/* tabella leaderBoard */
+
+@media (max-width: 600px) {
+  .MuiTable-root, .MuiTableHead-root, .MuiTableBody-root, .MuiTableRow-root, .MuiTableCell-root {
+    display: block;
+    width: 100%;
+  }
+
+  .MuiTableRow-root {
+    margin-bottom: 10px;
+  }
+
+  .MuiTableCell-root {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  }
+
+  .MuiTableCell-root::before {
+    content: attr(data-label);
+    font-weight: bold;
+    margin-right: 10px;
+  }
+
+  .MuiTableCell-root:last-child {
+    border-bottom: none;
+  }
 }
 
